# isshin-AI-TextFlow

./: .gitignore  PRD.md  README.md  index.html  marquee.html  package-lock.json  package.json  tooskill.txt  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build-desktop.yml
data/skills/: comedy_humor.md  historical_epic.md  mystery_thriller.md  xianxia_fantasy.md
docs/: ai-script.md  event-extraction.md  session-assistant-toolchain.md
scripts/: build-desktop.sh  ensure-desktop-platform.mjs  fix-mac-gatekeeper.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml  http-all.toml
src-tauri/src/: assets.rs  assistant_context.rs  db.rs  db_admin.rs  edit_export.rs  image.rs  lib.rs  llm.rs  main.rs  novel.rs  paths.rs  projects.rs  script.rs  skills.rs  video.rs  workflow.rs
src/agent/: graph.ts  prompt.ts  schema.ts
src/assets/: AppLogo.tsx  ChatGptLogo.tsx
src/components/: AiScriptStep.tsx  AssetDetailModal.tsx  AssetImagePreviewModal.tsx  AssetListTable.tsx  AssetRowActions.tsx  AssetTypeTag.tsx  BatchExtractAssetsModal.tsx  ChatArea.tsx  CreationView.tsx  DeleteAssetConfirmModal.tsx  DeleteProjectConfirmModal.tsx  DraftAssetEditModal.tsx  DraftAssetListTable.tsx  EditAssetModal.tsx  EditExportStep.tsx  EventChapterDetailModal.tsx  EventChaptersTable.tsx  ExtractEventsStep.tsx  GenerateAssetModal.tsx  GenerateAssetsStep.tsx  GenerateVideoStep.tsx  GenerationNotificationsPanel.tsx  HoverFullText.tsx  (+29 more)
(+108 files in other folders)
