[package]
name = "isshin-ai-agent"
version = "1.0.0"
description = "Isshin AI Agent Desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "isshin_ai_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
