[package]
name = "isshin-ai-textflow"
version = "1.0.0"
description = "Isshin AI TextFlow Desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "isshin_ai_textflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
